--- a/source/index.html
+++ b/source/index.html
@@ -1,10 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body style="background-color: red">
+  <body>
 
   </body>
 </html>
