--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Бэтмен 2021</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
