main block upper part added

--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Бэтмен 2021</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
@@ -22,6 +23,18 @@
           <img class="user-nav__avatar" src="img/avatar.jpg" alt="Аватар">
         </div>
       </header>
+      <main class="page-body__main main">
+        <h1 class="main__title">Бэтмен</h1>
+        <p class="main__subtitle">The Batman</p>
+        <div class="main__info info">
+          <div class="info__content">
+            <span class="info__tag">Фильм</span>
+            <span class="info__year">США, 2021 год</span>
+            <a class="info__trailer" href="#">Смотреть трейлер</an>
+          </div>
+          <a class="info__more">Подробнее</a>
+        </div>
+      </main>
     </div>
   </body>
 </html>
