desktop ver completed

--- a/source/index.html
+++ b/source/index.html
@@ -23,6 +23,7 @@
           <img class="user-nav__avatar" src="img/avatar.jpg" alt="Аватар">
         </div>
       </header>
+
       <main class="page-body__main main">
         <h1 class="main__title">Бэтмен</h1>
         <p class="main__subtitle">The Batman</p>
@@ -32,7 +33,63 @@
             <span class="info__year">США, 2021 год</span>
             <a class="info__trailer" href="#">Смотреть трейлер</an>
           </div>
-          <a class="info__more">Подробнее</a>
+          <a class="info__more" href="#">Подробнее</a>
+        </div>
+
+        <div class="main__content content">
+          <div class="content__short-info short-info">
+            <img class="short-info__poster" src="img/cover.png" width="184" height="260" alt="Постер фильма">
+            <a class="short-info__look-btn" href="#">Буду смотреть</a>
+            <ul class="short-info__actors actors">В главных ролях:
+              <li class="actors__item">Роберт Паттинсон</li>
+              <li class="actors__item">Зои Кравиц</li>
+              <li class="actors__item">Колин Фаррелл</li>
+              <li class="actors__item">Питер Сарсгаард</li>
+              <li class="actors__item">Пол Дано</li>
+              <li class="actors__item">Энди Серкис</li>
+              <li class="actors__item">Джеффри Райт</li>
+              <li class="actors__item">Джон Туртурро</li>
+              <li class="actors__item">Макс Карвер</li>
+              <li class="actors__item">Кон О’Нилл</li>
+            </ul>
+          </div>
+          <div class="content__large-info large-info">
+            <nav class="large-info__nav nav">
+              <ul class="nav__list nav-list">
+                <li class="nav-list__item nav-list__item_active">Описание</li>
+                <li class="nav-list__item">Рецензии</li>
+                <li class="nav-list__item">Премьеры</li>
+                <li class="nav-list__item">Актеры</li>
+                <li class="nav-list__item">Награды</li>
+                <li class="nav-list__item">Факты</li>
+                <li class="nav-list__item">Сайты</li>
+              </ul>
+              <a class="nav__icon-bookmark" href="#">
+                <img src="img/bookmark-orange.svg" alt="Добавить в закладки">
+              </a>
+            </nav>
+
+            <div class="large-info__main-info main-info">
+              <article class="main-info__article">
+                <p>Предстоящий американский супергеройский фильм, основанный на одноимённых комиксах издательства DC Comics. Картина будет выпущена компанией Warner Bros. и будет перезагрузкой всех фильмов о Бэтмене.</p>
+                <p>Фильм является десятым по счёту фильмом из Расширенной вселенной DC. Режиссёром и сценаристом фильма выступит Мэтт Ривз, а главную роль исполнит Роберт Паттинсон</p>
+                <h2 class="main-info__heading">Разработка</h2>
+                <p>В октябре 2014 года студия Warner Bros. объявила, что в разработке находится сольный фильм о Бэтмене, роль которого вновь исполнит Бен Аффлек. В июле 2015 года сообщалось, что Аффлек ведёт переговоры со студией по поводу постановки фильма и совместного написания сценария с Джеффом Джонсом. </p>
+                <p>После выхода фильма «Бэтмен против Супермена: На заре справедливости» руководитель агентства WME Патрик Уайтсел подтвердил, что Аффлек написал сценарий для сольного фильма о Бэтмене и в настоящий момент его рассматривают студия и DC. В мае 2016 года Джереми Айронс подтвердил, что он появится в фильме про Тёмного Рыцаря. </p>
+                <p>На Comic-Con в Сан-Диего в июле 2016 года было официально подтверждено, что Аффлек станет режиссёром картины. В августе 2016 года на одной из страниц Аффлека в социальных сетях был опубликован тестовый материал, в котором был показан персонаж Детстроук. 8 сентября 2016 года Джефф Джонс подтвердил, что Джо Манганьелло сыграет наёмника Слейда Уилсона, который, возможно, станет главным злодеем фильма.</p>
+              </article>
+              <div class="main-info__subscribe subscribe">
+                <form class="subscribe__form">
+                  <label class="subscribe__label" for="subscribe">Подпишитесь на обновления</label>
+                  <input class="subscribe__input" type="email" id="subscribe" placeholder="Ваш Email">
+                  <button class="subscribe__button" type="submit">
+                    <img src="img/check.svg" alt="Отправить">
+                  </button>
+                </form>
+                <img class="subscribe__ad" src="img/ad.jpg" alt="Реклама">
+              </div>
+            </div>
+          </div>
         </div>
       </main>
     </div>
